force-app/main/default/objects/LLC_BI__Onboarding__c/LLC_BI__Onboarding__c.object-meta.xml
<CustomObject>
    <description>This object represents the ability to onboard entities and maintain compliance throughout the lifecycle of the loan.</description>
    <label>Onboarding Case</label>
    <nameField>
        <displayFormat>ON-{00000}</displayFormat>
        <label>Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>