force-app/main/default/objects/LLC_BI__Onboarding__c/fields/LLC_BI__Closure_Reason__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Closure_Reason__c</fullName>
    <description>The reason the onboarding case is closed. The user can add a detailed description to support the status change.</description>
    <label>Closure Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>