force-app/main/default/objects/LLC_BI__Onboarding__c/fields/LLC_BI__lookupKey__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__lookupKey__c</fullName>
    <description>The reference number associated with the onboarding case, case number.</description>
    <externalId>true</externalId>
    <label>Lookup</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>