force-app/main/default/objects/LLC_BI__Onboarding__c/fields/LLC_BI__Stage__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Stage__c</fullName>
    <description>This picklist field indicates progress of the case through the onboarding process. The workflow automatically populates it, or a user can manually set it.</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CustomerEngagement</fullName>
                <default>true</default>
                <label>Customer Engagement</label>
            </value>
            <value>
                <fullName>DueDiligence</fullName>
                <label>Due Diligence</label>
            </value>
            <value>
                <fullName>Validation</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>